Try to fix tooltip clipping issue

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ canvas {
 }
 
 #workoutChart {
-    height: 120px;
+    height: 150px;
 }
 
 /*#foodChart {*/
